@@ -3,6 +3,7 @@
   -Did a little code cleaup
   -Fixed crash reading large chunks of data
   -Make sure connection size is correct
+  -Added 50_Large_Forward_Open example
 
 04/08/19
   -Return the raw bytes when a UDT is read, added example
